Jenkins file added

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,6 @@
   </head>
 
   <body>
-    <h1>Mohamed Khaled AbdELhakim 20225056 Hola /h1>
+    <h1>Mohamed Khaled AbdELhakim 20225056 Holaa /h1>
   </body>
 </html>
