--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 
     <div class="content">
       <div class="content-box">
-        <h1>Before Jenkins CI/CD</h1>
+        <h1>After Jenkins CI/CD</h1>
         <div class="subtitle">Testing site before deployment</div>
       </div>
     </div>
