--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
     <div class="content">
       <div class="content-box">
         <h1>After Jenkins CI/CD</h1>
-        <div class="subtitle">Testing site before deployment BOOm</div>
+        <div class="subtitle">Testing site before deployment</div>
       </div>
     </div>
   </body>
